Tue Feb 15 22:07:40 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>

          [r4325] 2011-02-15 22:05  martinezm
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.edit/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Provider/LocationPathItemProvider.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.edit/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Provider/LocationVariableItemProvider.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.edit/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Provider/SearchLocationItemProvider.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/plugin.properties:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/DeploymentTab.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/GeneratorEditor.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/GeneratorModelWizard.java:

          Refining the behaviors of the deployment tab. Added text field entry
          to create new search paths.

Tue Feb 15 21:31:28 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Generator/ParsedXmlFile.java:

          Retrieve the timestamp on demand instead of attempting to cache it.

Tue Feb 15 21:25:52 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/model/opendds/diagram/dcpslib/edit/parts:

          svn:ignore auto-generated file.

Tue Feb 15 21:17:48 UTC 2011  Byron Harris  <harrisb@ociweb.com>
