@@ -1,7 +1,9 @@
 #include "Sync.h"
+#include <dds/DCPS/debug.h>
 #include <dds/DCPS/WaitSet.h>
-#include <iostream>
 #include <stdexcept>
+
+using OpenDDS::DCPS::DCPS_debug_level;
 
 OpenDDS::Model::WriterSync::WriterSync(DDS::DataWriter_var& writer) :
 writer_(writer)
@@ -30,7 +32,9 @@ OpenDDS::Model::WriterSync::wait_match(DDS::DataWriter_var& writer)
   DDS::Duration_t timeout = { 3, 0 };
   DDS::ReturnCode_t stat;
   do {
-    // std::cout << "waiting for pub matched" << std::endl;
+    if (DCPS_debug_level > 4) {
+      ACE_DEBUG((LM_NOTICE, ACE_TEXT("WriterSync: waiting for pub matched\n")));
+    }
     stat = writer->get_publication_matched_status(ms);
     if (stat != DDS::RETCODE_OK) {
       ACE_ERROR_RETURN((
@@ -50,7 +54,9 @@ OpenDDS::Model::WriterSync::wait_match(DDS::DataWriter_var& writer)
                        -1);
     }
   } while (true);
-  // std::cout << "pub matched" << std::endl;
+  if (DCPS_debug_level > 4) {
+    ACE_DEBUG((LM_NOTICE, ACE_TEXT("WriterSync: pub matched\n")));
+  }
   ws->detach_condition(condition);
   return 0;
 }
@@ -60,7 +66,9 @@ OpenDDS::Model::WriterSync::wait_ack(DDS::DataWriter_var& writer)
 {
   DDS::ReturnCode_t stat;
   DDS::Duration_t timeout = { 30, 0 };
-  // std::cout << "waiting for acks" << std::endl;
+  if (DCPS_debug_level > 4) {
+    ACE_DEBUG((LM_NOTICE, ACE_TEXT("WriterSync: waiting for acks\n")));
+  }
   stat = writer->wait_for_acknowledgments(timeout);
   if ((stat != DDS::RETCODE_OK) && (stat != DDS::RETCODE_TIMEOUT)) {
     ACE_ERROR_RETURN((LM_ERROR,
@@ -68,7 +76,9 @@ OpenDDS::Model::WriterSync::wait_ack(DDS::DataWriter_var& writer)
                       ACE_TEXT(" wait_for_acknowledgments failed!\n")),
                      -1);
   }
-  // std::cout << "Acks received" << std::endl;
+  if (DCPS_debug_level > 4) {
+    ACE_DEBUG((LM_NOTICE, ACE_TEXT("WriterSync: acks received\n")));
+  }
   return 0;
 }
 
@@ -96,7 +106,9 @@ OpenDDS::Model::ReaderSync::wait_unmatch(DDS::DataReader_var& reader)
   DDS::SubscriptionMatchedStatus ms = { 0, 0, 0, 0, 0 };
   DDS::Duration_t timeout = { 1, 0 };
   do {
-    // std::cout << "sub checking unmatched" << std::endl;
+    if (DCPS_debug_level > 4) {
+      ACE_DEBUG((LM_NOTICE, ACE_TEXT("ReaderSync: sub checking unmatched\n")));
+    }
     stat = reader->get_subscription_matched_status(ms);
     if (stat != DDS::RETCODE_OK) {
       ACE_ERROR_RETURN((
@@ -105,10 +117,16 @@ OpenDDS::Model::ReaderSync::wait_unmatch(DDS::DataReader_var& reader)
                   ACE_TEXT(" get_subscription_matched_status failed!\n")),
                  -1);
     } else if (ms.current_count == 0 && ms.total_count > 0) {
+      if (DCPS_debug_level > 4) {
+        ACE_DEBUG((LM_NOTICE, ACE_TEXT("ReaderSync: sub match count %d total count %d\n"), 
+                                       ms.current_count, ms.total_count));
+      }
       break;  // unmatched
     }
-    // std::cout << "sub match count " << ms.current_count
-    //           <<    " total count " << ms.total_count << std::endl;
+    if (DCPS_debug_level > 4) {
+      ACE_DEBUG((LM_NOTICE, ACE_TEXT("ReaderSync: sub match count %d total count %d\n"), 
+                                     ms.current_count, ms.total_count));
+    }
     // wait for a change
     stat = ws->wait(conditions, timeout);
     if ((stat != DDS::RETCODE_OK) && (stat != DDS::RETCODE_TIMEOUT)) {
@@ -119,7 +137,9 @@ OpenDDS::Model::ReaderSync::wait_unmatch(DDS::DataReader_var& reader)
     }
   } while (true);
   ws->detach_condition(condition);
-  // std::cout << "sub unmatched" << std::endl;
+  if (DCPS_debug_level > 4) {
+    ACE_DEBUG((LM_NOTICE, ACE_TEXT("ReaderSync: sub unmatched\n")));
+  }
   return 0;
 }
 
